# NEVALDReportGen

./: .gitignore  README.md  config.py  desktop_app.py  env.example  pyproject.toml  requirements.txt  setup.py  test_paths.py
Output CSVs/Athlete/: CMJ.csv  Full_Data.csv  HJ.csv  IMTP.csv  PPU.csv
Output CSVs/Reference/: CMJ_ref.csv  HJ_ref.csv  IMTP_ref.csv  PPU_ref.csv
ReportScripts/: __init__.py
ReportScripts/GenerateReports/: FD&SprintPDFV1.py  FD_PDF_V1.py  charts.py  comp_calculator.py  data_loader.py
ReportScripts/PullRefData/: pull_all.py  pull_cmj_ref.py  pull_hj_ref.py  pull_imtp_ref.py  pull_ppu_ref.py  pull_ref_data.py  testingGCP.py
ReportScripts/VALD_API/: VALDapiHelpers.py  __init__.py  ind_ath_data.py  test_ind_ath_data_helpers.py  token_gen.py  vald_client.py
requirements/: base.txt  build.txt  dev.txt
scripts/: build_dist.py
src/nevald_report_gen/: __init__.py  config.py  desktop_app.py
src/nevald_report_gen/api/: VALDapiHelpers.py  ind_ath_data.py  metric_vars.py  token_gen.py  vald_client.py
src/nevald_report_gen/data/: __init__.py  pull_all.py  pull_cmj_ref.py  pull_hj_ref.py  pull_imtp_ref.py  pull_ppu_ref.py  pull_ref_data.py
src/nevald_report_gen/reports/: FD_PDF_V1.py  charts.py  data_loader.py
tests/: __init__.py
tests/test_api/: test_ind_ath_data_helpers.py
